--- a/index.html
+++ b/index.html
@@ -13,19 +13,16 @@
 <body>
 
   <header class="header">
-    <a href="#" class="logo">Logo</a>
+    <a href="#" class="logo"><img src="./image/logo1.png" class="logo-img"></a>
 
     <nav>
       <ul class="menu">
-        <li>Cachorros</li>
-          <!--<ul class="sub-menu">
-            <li>Keila</li>
-            <li>Nino</li>
-            <li>Pipoca</li>
-            <li>Thor</li>
-            <li>Mel</li>
-            <li>Misha</li>
-          </ul>-->
+        <li><a href="#mel">Mel</a></li>
+        <li><a href="#misha">Misha</a></li>
+        <li><a href="#keila">Keila</a></li>
+        <li><a href="#nino">Nino</a></li>
+        <li><a href="#pipoca">Pipoca</a></li>
+        <li><a href="#thor">Thor</a></li>
       </ul>
     </nav>
   </header>
@@ -49,7 +46,7 @@
       </div>
 
       <figure>
-        <img src="./image/autor.png" class="autor">
+        <img src="./image/autor.png" class="autor" alt="Imagem do Autor do site">
       </figure>
 
     </section>
@@ -59,7 +56,14 @@
     </section>
 
     <section class="keila">
-      <h2>Keila</h2>
+      <div class="container">
+        <h2>Keila</h2>
+        <div class="underline-keila"></div>
+      </div>
+
+      <figure>
+        <img src="https://fakeimg.pl/250x250/" class="keila-img">
+      </figure>
     </section>
 
     <section class="nino">
@@ -79,7 +83,7 @@
     </section>
 
     <section class="misha">
-      Misha
+      <h2>Misha</h2>
     </section>
   </main>
 
