Changes in Dogs Section (Hovers and Flex)

--- a/index.html
+++ b/index.html
@@ -66,8 +66,15 @@
       </figure>
     </section>
 
-    <section class="nino">
-      <h2>Ninão</h2>
+    <section class="nino">      
+      <figure>
+        <img src="https://fakeimg.pl/250x250/" class="nino-img">
+      </figure>
+
+      <div class="container">
+        <h2>Ninão</h2>
+        <div class="underline-nino"></div>
+      </div>
     </section>
 
     <section class="pipoca">
@@ -91,6 +98,5 @@
     <p>Copyright © 2022. LG Sites</p>
     <a href="#">Política de Privacidade</a>
   </footer>
-    
 </body>
 </html>
