Changes in Dogs Section (adjusted the structure of each section)

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 
     </section>
 
+    <!--Keila Section-->
     <section class="keila">
       <div class="container">
         <h2>Keila</h2>
@@ -66,6 +67,7 @@
       </figure>
     </section>
 
+    <!--Nino Section-->
     <section class="nino">      
       <figure>
         <img src="https://fakeimg.pl/250x250/" class="nino-img">
@@ -77,20 +79,52 @@
       </div>
     </section>
 
+    <!--Pipoca Section-->
     <section class="pipoca">
-      <h2>Pipoca</h2>
+      <div class="container">
+        <h2>Pipoca</h2>
+        <div class="underline-pipoca"></div>
+      </div>
+
+      <figure>
+        <img src="https://fakeimg.pl/250x250/" class="pipoca-img">
+      </figure>
     </section>
 
-    <section class="thor">
-      <h2>Thor</h2>
+    <!--Thor Section-->
+    <section class="thor">      
+      <figure>
+        <img src="https://fakeimg.pl/250x250/" class="thor-img">
+      </figure>
+
+      <div class="container">
+        <h2>Thor</h2>
+        <div class="underline-thor"></div>
+      </div>
     </section>
 
+    <!--Mel Section-->
     <section class="mel">
-      <h2>Melzinha</h2>
+      <div class="container">
+        <h2>Melzinha</h2>
+        <div class="underline-mel"></div>
+      </div>
+
+      <figure>
+        <img src="https://fakeimg.pl/250x250/" class="mel-img">
+      </figure>
     </section>
 
-    <section class="misha">
-      <h2>Misha</h2>
+    <!--Misha Section-->
+    <section class="misha">      
+      <figure>
+        <img src="https://fakeimg.pl/250x250/" class="misha-img">
+      </figure>
+
+      <div class="container">
+        <h2>Misha</h2>
+        <div class="underline-misha"></div>
+      </div>
     </section>
   </main>
 
