Add hover effects in title of dogs

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="./css/normalize.css">
-  <link rel="stylesheet" href="./css/style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/components/icon.min.css" integrity="sha512-8Tb+T7SKUFQWOPIQCaLDWWe1K/SY8hvHl7brOH8Nz5z1VT8fnf8B+9neoUzmFY3OzkWMMs3OjrwZALgB1oXFBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" type="image/x-icon" href="./image/favicon.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/components/icon.min.css" integrity="sha512-8Tb+T7SKUFQWOPIQCaLDWWe1K/SY8hvHl7brOH8Nz5z1VT8fnf8B+9neoUzmFY3OzkWMMs3OjrwZALgB1oXFBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Dogs da minha vida</title>
 </head>
 <body>
@@ -56,10 +57,10 @@
     </section>
 
     <!--Keila Section-->
-    <section class="keila">
+    <section class="keila" id="keila">
       <div class="container">
-        <h2>Keila</h2>
-        <div class="underline-keila"></div>
+        <h2 class="hover-underline-animation">Keila</h2>
+        <div class="underline-left"></div>
       </div>
 
       <figure>
@@ -68,22 +69,22 @@
     </section>
 
     <!--Nino Section-->
-    <section class="nino">      
+    <section class="nino" id="nino">      
       <figure>
         <img src="https://fakeimg.pl/250x250/" class="nino-img">
       </figure>
 
       <div class="container">
-        <h2>Ninão</h2>
-        <div class="underline-nino"></div>
+        <h2 class="hover-underline-animation-right">Ninão</h2>
+        <div class="underline-right"></div>
       </div>
     </section>
 
     <!--Pipoca Section-->
-    <section class="pipoca">
+    <section class="pipoca" id="pipoca">
       <div class="container">
-        <h2>Pipoca</h2>
-        <div class="underline-pipoca"></div>
+        <h2 class="hover-underline-animation">Pipoca</h2>
+        <div class="underline-left"></div>
       </div>
 
       <figure>
@@ -92,22 +93,22 @@
     </section>
 
     <!--Thor Section-->
-    <section class="thor">      
+    <section class="thor" id="thor">      
       <figure>
         <img src="https://fakeimg.pl/250x250/" class="thor-img">
       </figure>
 
       <div class="container">
-        <h2>Thor</h2>
-        <div class="underline-thor"></div>
+        <h2 class="hover-underline-animation-right">Thor</h2>
+        <div class="underline-right"></div>
       </div>
     </section>
 
     <!--Mel Section-->
-    <section class="mel">
+    <section class="mel" id="mel">
       <div class="container">
-        <h2>Melzinha</h2>
-        <div class="underline-mel"></div>
+        <h2 class="hover-underline-animation">Melzinha</h2>
+        <div class="underline-left"></div>
       </div>
 
       <figure>
@@ -116,14 +117,14 @@
     </section>
 
     <!--Misha Section-->
-    <section class="misha">      
+    <section class="misha" id="misha">      
       <figure>
         <img src="https://fakeimg.pl/250x250/" class="misha-img">
       </figure>
 
       <div class="container">
-        <h2>Misha</h2>
-        <div class="underline-misha"></div>
+        <h2 class="hover-underline-animation-right">Misha</h2>
+        <div class="underline-right"></div>
       </div>
     </section>
   </main>
