Removed and optimized duplicate css codes and added new images

--- a/index.html
+++ b/index.html
@@ -57,21 +57,21 @@
     </section>
 
     <!--Keila Section-->
-    <section class="keila" id="keila">
+    <section class="dog-right" id="keila">
       <div class="container">
         <h2 class="hover-underline-animation">Keila</h2>
         <div class="underline-left"></div>
       </div>
 
       <figure>
-        <img src="https://fakeimg.pl/250x250/" class="keila-img">
+        <img src="https://fakeimg.pl/250x250/" class="dog-right-img">
       </figure>
     </section>
 
     <!--Nino Section-->
-    <section class="nino" id="nino">      
+    <section class="dog-left" id="nino">      
       <figure>
-        <img src="https://fakeimg.pl/250x250/" class="nino-img">
+        <img src="./image/nino.png" class="dog-left-img">
       </figure>
 
       <div class="container">
@@ -81,21 +81,21 @@
     </section>
 
     <!--Pipoca Section-->
-    <section class="pipoca" id="pipoca">
+    <section class="dog-right" id="pipoca">
       <div class="container">
         <h2 class="hover-underline-animation">Pipoca</h2>
         <div class="underline-left"></div>
       </div>
 
       <figure>
-        <img src="https://fakeimg.pl/250x250/" class="pipoca-img">
+        <img src="https://fakeimg.pl/450x450/" class="dog-right-img">
       </figure>
     </section>
 
     <!--Thor Section-->
-    <section class="thor" id="thor">      
+    <section class="dog-left" id="thor">      
       <figure>
-        <img src="https://fakeimg.pl/250x250/" class="thor-img">
+        <img src="./image/thor.png" class="dog-left-img">
       </figure>
 
       <div class="container">
@@ -105,21 +105,21 @@
     </section>
 
     <!--Mel Section-->
-    <section class="mel" id="mel">
+    <section class="dog-right" id="mel">
       <div class="container">
         <h2 class="hover-underline-animation">Melzinha</h2>
         <div class="underline-left"></div>
       </div>
 
       <figure>
-        <img src="https://fakeimg.pl/250x250/" class="mel-img">
+        <img src="https://fakeimg.pl/250x250/" class="dog-right-img">
       </figure>
     </section>
 
     <!--Misha Section-->
-    <section class="misha" id="misha">      
+    <section class="dog-left" id="misha">      
       <figure>
-        <img src="https://fakeimg.pl/250x250/" class="misha-img">
+        <img src="https://fakeimg.pl/250x250/" class="dog-left-img">
       </figure>
 
       <div class="container">
