Add all images of my dogs

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
     <nav>
       <ul class="menu">
+        <li><a href="#keila">Keila</a></li>
         <li><a href="#mel">Mel</a></li>
         <li><a href="#misha">Misha</a></li>
-        <li><a href="#keila">Keila</a></li>
         <li><a href="#nino">Nino</a></li>
         <li><a href="#pipoca">Pipoca</a></li>
         <li><a href="#thor">Thor</a></li>
@@ -64,7 +64,31 @@
       </div>
 
       <figure>
-        <img src="https://fakeimg.pl/250x250/" class="dog-right-img">
+        <img src="./image/keila.png" class="dog-right-img">
+      </figure>
+    </section>
+
+    <!--Mel Section-->
+    <section class="dog-left" id="mel">
+      <figure>
+        <img src="./image/mel.png" class="dog-right-img">
+      </figure>
+
+      <div class="container">
+        <h2 class="hover-underline-animation-right">Melzinha</h2>
+        <div class="underline-right"></div>
+      </div>
+    </section>
+
+    <!--Misha Section-->
+    <section class="dog-right" id="misha">
+      <div class="container">
+        <h2 class="hover-underline-animation">Keila</h2>
+        <div class="underline-left"></div>
+      </div>
+
+      <figure>
+        <img src="./image/misha.png" class="dog-right-img">
       </figure>
     </section>
 
@@ -88,7 +112,7 @@
       </div>
 
       <figure>
-        <img src="https://fakeimg.pl/450x450/" class="dog-right-img">
+        <img src="./image/pipoca.png" class="dog-right-img">
       </figure>
     </section>
 
@@ -100,30 +124,6 @@
 
       <div class="container">
         <h2 class="hover-underline-animation-right">Thor</h2>
-        <div class="underline-right"></div>
-      </div>
-    </section>
-
-    <!--Mel Section-->
-    <section class="dog-right" id="mel">
-      <div class="container">
-        <h2 class="hover-underline-animation">Melzinha</h2>
-        <div class="underline-left"></div>
-      </div>
-
-      <figure>
-        <img src="https://fakeimg.pl/250x250/" class="dog-right-img">
-      </figure>
-    </section>
-
-    <!--Misha Section-->
-    <section class="dog-left" id="misha">      
-      <figure>
-        <img src="https://fakeimg.pl/250x250/" class="dog-left-img">
-      </figure>
-
-      <div class="container">
-        <h2 class="hover-underline-animation-right">Misha</h2>
         <div class="underline-right"></div>
       </div>
     </section>
