Add link in buttons

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 
         <div class="social-banner">
           <h4>Para mais informações, me siga nas redes sociais:</h4>
-          <button class="social"><i class="github icon"></i> GitHub</button>
-          <button class="social"><i class="linkedin icon"></i> Linkedin</button>
-          <button class="social"><i class="instagram icon"></i> Instagram</button>
-          <button class="social"><i class="mail icon"></i> Gmail</button>
+          <a href="https://github.com/lgbarros" target="blank"><button class="social"><i class="github icon"></i> GitHub</button></a>
+          <a href="https://www.linkedin.com/in/lucas-almeida-barros/" target="blank"><button class="social"><i class="linkedin icon"></i> Linkedin</button></a>
+          <a href="https://www.instagram.com/lgbarross/" target="blank"><button class="social"><i class="instagram icon"></i> Instagram</button></a>
+          <a href="mailto:lucasg.barros.94@gmail.com"><button class="social"><i class="mail icon"></i> Gmail</button></a>
         </div>
       </div>
 
