--- a/index.html
+++ b/index.html
@@ -10,15 +10,18 @@
     <link rel="icon" type="image/x-icon" href="./image/favicon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/components/icon.min.css" integrity="sha512-8Tb+T7SKUFQWOPIQCaLDWWe1K/SY8hvHl7brOH8Nz5z1VT8fnf8B+9neoUzmFY3OzkWMMs3OjrwZALgB1oXFBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script type="text/javascript" src="./javascript.js"></script>
     <title>Dogs da minha vida</title>
 </head>
+
 <body>
-
   <header class="header">
-    <a href="#" class="logo"><img src="./image/logo1.png" class="logo-img"></a>
+    <a href="#" class="logo-area"><img src="./image/logo1.png" class="logo-img"></a>
 
-    <nav>
-      <ul class="menu">
+    <nav id="nav">
+      <button id="btn-mobile">Menu</button>
+
+      <ul id="menu">
         <li><a href="#keila">Keila</a></li>
         <li><a href="#mel">Mel</a></li>
         <li><a href="#misha">Micha</a></li>
@@ -30,6 +33,7 @@
   </header>
 
   <main>
+    
     <section class="banner">
       <div class="conteudo-banner">
         <h1>Dogs da minha vida</h1>
