--- a/index.html
+++ b/index.html
@@ -265,14 +265,15 @@
   </main>
 
   <footer>
-    <div class="redes sociais">
+    <div class="redes-sociais">
       <a href="https://www.instagram.com/lgbarross/" target="blank"><i class="fa-brands fa-instagram" id="instagram"></i></a>
       <a href="#" target="blank"><i class="fa-brands fa-whatsapp" id="whatsapp"></i></a>
       <a href="https://www.linkedin.com/in/lucas-almeida-barros/" target="blank"><i class="fa-brands fa-linkedin-in" id="linkedin"></i></a>
       <a href="https://github.com/lgbarros" target="blank"><i class="fa-brands fa-github" id="github"></i></a>
     </div>
-    
+    <br>
     <p>Copyright © 2022. LG Sites</p>
+    <br>
     <a href="#">Política de Privacidade</a>
   </footer>
 </body>
