Menu mobile with JS

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/x-icon" href="./image/favicon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/components/icon.min.css" integrity="sha512-8Tb+T7SKUFQWOPIQCaLDWWe1K/SY8hvHl7brOH8Nz5z1VT8fnf8B+9neoUzmFY3OzkWMMs3OjrwZALgB1oXFBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    
+    <script src="./javascript.js"></script>
     <title>Dogs da minha vida</title>
 </head>
 
@@ -19,7 +19,9 @@
     <a href="#" class="logo-area"><img src="./image/logo1.png" class="logo-img"></a>
 
     <nav id="nav">
-      <button id="btn-mobile">Menu</button>
+      <button id="btn-mobile">
+        <span id="hamburguer"></span>
+      </button>
 
       <ul id="menu">
         <li><a href="#keila">Keila</a></li>
@@ -107,7 +109,7 @@
           <p>
             <b>Apelido:</b>
             <br>
-            Abominável Homen das Mel / Mano Brown
+            Abominável Homem das Mel / Mano Brown
           </p>
 
           <p>
@@ -147,7 +149,7 @@
           <p>
             <b>Breve descrição:</b>
             <br>
-            Sofre Bullying da Pipoca e do Nino.
+            Se alguém começar a chorar ela vai consolar a pessoa, só quer paz, não gosta de agitação.
           </p>
         </div>
       </div>
@@ -257,7 +259,7 @@
           <p>
             <b>Breve descrição:</b>
             <br>
-            Tem medo de tudo...Desde a carinhos até há uma garoa.
+            Tem medo de tudo...Desde a carinhos até uma garoa.
           </p>
         </div>
       </div>
